# upande_packhouse

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: BoxLabelCard.tsx  ColdPressureCard.tsx  ErrorBoundary.tsx  FlowCard.tsx  GlassBackground.tsx  KpiCard.tsx  Layout.tsx  OplCard.tsx  PageHeader.tsx  Panel.tsx  Segmented.tsx  States.tsx  TeamDropdown.tsx  TopNav.tsx  VarietyModal.tsx
frontend/src/components/charts/: ChartTooltip.tsx  CustomerBars.tsx  RadialGauge.tsx  StageDonut.tsx  TeamBars.tsx  generic.tsx
frontend/src/components/ui/: PageBar.tsx  StatusLabel.tsx  Table.tsx  Typeahead.tsx  badge.tsx  button.tsx  card.tsx  controls.tsx  dialog.tsx  dropdown-menu.tsx  progress.tsx  separator.tsx  tabs.tsx  toast.tsx
frontend/src/hooks/: useColdRoom.ts  useDashboard.ts  useLiveData.ts
frontend/src/lib/: api.ts  bucket.ts  charts.ts  format.ts  transform.ts  types.ts
frontend/src/pages/: AllocationPlanningPage.tsx  BucketTrackerPage.tsx  ColdRoomPage.tsx  OrderSummaryPage.tsx  StockVisibilityPage.tsx  WorkflowPage.tsx
upande_packhouse/: hooks.py  modules.txt
upande_packhouse/www/: packhouse.html  packhouse.py
